# nn-stability-margins

./: activations.py  inv_pend_model.pth  inv_pend_model_nonlin1.pth  lti_controllers.py  plots.py  pyproject.toml  readme.md  rollout.py  savio_train.py  test.py  theta_dissipativity.py  thetahat_dissipativity.py  train.sh  train_controller.py  train_implicit_network.py  trainers.py  utils.py  variable_structs.py
envs/: __init__.py  cartpole.py  disk_margin_base.py  disk_margin_example.py  flex_arm.py  flex_arm_disk_margin.py  inverted_pendulum.py  learned_inverted_pendulum.py  linearized_inverted_pendulum.py  other_inverted_pendulum.py  pendubot.py  powergrid.py  simple.py  time_delay_inverted_pendulum.py  vehicle.py
learned_models/: inv_pend_model_B2_nonlin2.pth  inv_pend_model_nonlin2.pth
models/: BaseRNN.py  LTI.py  ProjREN.py  ProjRNN.py  ProjRNNOld.py  RINN.py  RNN.py  ThetaHat.py  __init__.py  dissipative_RINN.py  dissipative_simplest_RINN.py  dissipative_theta_RINN.py  fully_connected.py  implicit_model.py  oldrnn.py  ren_projection.py  rnn_projection.py  theta_hat_parameterization.py  utils.py
